--- a/src/css/caveview.less
+++ b/src/css/caveview.less
@@ -11,6 +11,7 @@
 @background: #222222;
 @offwhite: #dddddd;
 
+@list-divider: #444444;
 @font-size: 12px;
 
 @tab-size: 40px;
@@ -93,17 +94,12 @@ body {
 #cv-frame div.page li {
 	position: relative;
 	margin-left: 20px;
-	border-bottom: 1px solid #444444;
+	border-bottom: 1px solid @list-divider;
 }
 
-#cv-frame div.page ul li.selected {
-	color: @highlight;
-}
-
-#cv-frame div.page li:hover, #cv-frame div.page div#ui-path:hover {
-	color: @highlight;
-}
-
+#cv-frame div.page ul li.selected,
+#cv-frame div.page li:hover,
+#cv-frame div.page div#ui-path:hover,
 #cv-frame div.page div#ui-path span {
 	color: @highlight;
 }
@@ -355,7 +351,7 @@ body {
 #cv-frame div.page label {
 	display: block;
 	height: 24px;
-	padding: 4px 0 4px 0px;
+	padding: 4px 0 4px 2px;
 	line-height: 16px;
 }
 
@@ -424,7 +420,7 @@ body {
 #cv-frame dt {
 	clear: both;
 	float: left;
-	padding-left: 16px;
+	padding-left: 8px;
 }
 
 #cv-frame dd {
