--- a/src/css/caveview.less
+++ b/src/css/caveview.less
@@ -65,6 +65,7 @@ body {
 	overflow-y: auto;
 	overflow-x: hidden;
 	font-size: @font-size;
+	border-right: @tab-border;
 }
 
 #cv-frame div.page {
@@ -152,7 +153,7 @@ body {
 	height: @tab-size;
 	width: @tab-size;
 	border-top: 1px solid black;
-	border-left: @tab-border;
+	border-left: 1px solid black;
 	background-color: @tab-inactive;
 	background-origin: content-box;
 	background-image: @icon-sheet;
@@ -228,6 +229,8 @@ body {
 	border-bottom: @tab-border;
 	border-left: none;
 	border-right: 2px solid @highlight;
+	width: @tab-size + 1;
+	margin-left: -1px;
 }
 
 @media (min-width: 768px) {
@@ -312,6 +315,8 @@ body {
 		border-top: 4px solid @highlight;
 		border-bottom: none;
 		z-index: 20;
+		margin-left: 0;
+		width: @tab-size;
 	}
 
 	#cv-tab-box #close {
@@ -549,4 +554,14 @@ body {
 #cv-frame input[type=range]:focus::-ms-fill-lower,
 #cv-frame input[type=range]:focus::-ms-fill-upper {
 	background: @track-background;
+}
+
+#logo {
+	width: 48px;
+	height: 48px;
+	margin-top: 15px;
+	margin-right: 8px;
+	background-image: url( "../images/logo.svg" );
+	background-size: cover;
+	float: left;
 }
