--- a/src/css/caveview.less
+++ b/src/css/caveview.less
@@ -556,6 +556,18 @@ body {
 	background: @track-background;
 }
 
+#cv-frame label#cv-file-label {
+	background-image: url( "../images/open.png" );
+	background-repeat: no-repeat;
+	background-position: 0px 5px;
+	padding-left: 20px;
+}
+
+#cv-frame input[type=file] {
+	width: 1px;
+	opacity: 0;
+}
+
 #logo {
 	width: 48px;
 	height: 48px;
