restyle file button and allow multiple file selection

--- a/src/css/caveview.less
+++ b/src/css/caveview.less
@@ -557,10 +557,23 @@ body {
 }
 
 #cv-frame label#cv-file-label {
-	background-image: url( "../images/open.png" );
-	background-repeat: no-repeat;
-	background-position: 0px 5px;
 	padding-left: 20px;
+}
+
+#cv-frame label#cv-file-label img {
+	position: absolute;
+	left: 0px;
+	width:18px;
+	height: 18px;
+	background-color: white;
+}
+
+#cv-frame label#cv-file-label:hover {
+	color: @highlight;
+}
+
+#cv-frame label#cv-file-label:hover img {
+	background-color: @highlight;
 }
 
 #cv-frame input[type=file] {
