--- a/src/css/caveview.less
+++ b/src/css/caveview.less
@@ -557,19 +557,31 @@ body {
 }
 
 #cv-frame label#cv-file-label {
-	padding-left: 20px;
+	margin: 2px 0px 2px 0px;
+	padding: 0px 0px 3px 20px;
+	height: 20px;
+	border: 1px solid grey;
+	vertical-align: bottom;
+}
+
+#cv-frame label#cv-file-label + select {
+	margin-top: 2px;
+	border-left: 2px solid @background;
 }
 
 #cv-frame label#cv-file-label img {
 	position: absolute;
-	left: 0px;
-	width:18px;
-	height: 18px;
+	left: 2px;
+	top: 3px;
+	width: 18px;
+	height: 16px;
 	background-color: white;
+	display: block;
 }
 
 #cv-frame label#cv-file-label:hover {
 	color: @highlight;
+	border-color: @highlight;
 }
 
 #cv-frame label#cv-file-label:hover img {
