--- a/src/css/caveview.less
+++ b/src/css/caveview.less
@@ -155,6 +155,11 @@ body {
 	background-origin: content-box;
 	background-repeat: no-repeat;
 	padding: 1px;
+	filter: brightness( 0.85 );
+}
+
+.cv-tab-box .tab:hover {
+	filter: brightness( 1.0 );
 }
 
 .cv-tab-box .close {
@@ -225,6 +230,7 @@ body {
 	border-right: 2px solid @highlight;
 	width: @tab-size + 1;
 	margin-left: -1px;
+	filter: brightness( 1.0 );
 }
 
 div.cv-gps-button {
@@ -247,6 +253,31 @@ div.cv-gps-button {
 	filter: brightness( 1.0 );
 }
 
+div.cv-frame {
+	scrollbar-color: black #ccc; /* FF */
+}
+
+div.cv-frame::-webkit-scrollbar {
+	width: 16px;
+}
+
+div.cv-frame::-webkit-scrollbar-button:start {
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='white' width='18px' height='18px'%3E%3Cpath d='M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
+}
+
+div.cv-frame::-webkit-scrollbar-button:end {
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='white' width='18px' height='18px'%3E%3Cpath d='M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
+}
+
+.cv-frame::-webkit-scrollbar-track {
+	background: #ccc;
+}
+
+.cv-frame::-webkit-scrollbar-thumb {
+	background:black;
+	border: 2px solid #ccc;
+	border-radius: 2px;
+}
 
 @media (min-width: 768px) {
 
