fine tuning css

--- a/src/css/caveview.less
+++ b/src/css/caveview.less
@@ -270,12 +270,12 @@ div.cv-frame::-webkit-scrollbar-button:end {
 }
 
 .cv-frame::-webkit-scrollbar-track {
-	background: #ccc;
+	background: #bbb;
 }
 
 .cv-frame::-webkit-scrollbar-thumb {
 	background:black;
-	border: 2px solid #ccc;
+	border: 1px solid #bbb;
 	border-radius: 2px;
 }
 
