improve tree list selection layout

--- a/src/css/caveview.less
+++ b/src/css/caveview.less
@@ -706,6 +706,16 @@ div.cv-frame::-webkit-scrollbar-button:end {
 	margin-left: 0;
 }
 
+.cv-frame div.page ul.cv-tree ul {
+	padding-right: 0;
+}
+
 .cv-frame li ul.cv-tree {
-	margin-left: 20px;
+	margin-left: 10px;
+}
+
+li span {
+	display: inline-block;
+	width: 10px;
+	padding-right: 2px;
 }
