--- a/src/css/caveview.less
+++ b/src/css/caveview.less
@@ -719,3 +719,8 @@ li span {
 	width: 10px;
 	padding-right: 2px;
 }
+
+.cv-frame div.page li.highlight {
+	border-bottom: 1px solid white;
+	font-weight: bold;
+}
