--- a/src/css/caveview.less
+++ b/src/css/caveview.less
@@ -331,9 +331,13 @@ div.cv-frame::-webkit-scrollbar-button:end {
 		padding-top: @tab-size;
 	}
 
+	.cv-frame div.cv-frame-header {
+		width: 95%;
+	}
+
 	.cv-frame div.page {
 		width: 95%;
-		top: @tab-size;
+		top: @tab-size * 2;
 	}
 
 	.cv-frame div.page div.slide, .cv-frame div.slide ul {
