fix single pane selection layout

--- a/src/css/caveview.less
+++ b/src/css/caveview.less
@@ -90,6 +90,14 @@
 	display: none;
 }
 
+.cv-frame div.page div.slide ul.cv-tree {
+	width: 280px;
+}
+
+.cv-frame div.page div.slide ul.cv-tree li {
+	margin-left: 20px;
+}
+
 .cv-frame div.page ul {
 	list-style-type: none;
 	height: 100%;
@@ -120,7 +128,7 @@
 
 .cv-frame div.page div.slide {
 	position: absolute;
-	top: 82px;
+	top: 42px;
 	bottom: 4px;
 	left: 0px;
 	max-height: 100%;
